# AIRE

./: .gitignore  ANALYSE_ENTROPY_DROP.md  ANALYSE_TLV.md  CORRECTION_MDL.md  Cargo.toml  README.md  VERIFICATION_MDL.md  run-cli.sh  run-gui.sh  toto.json
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: corpus.rs  error.rs  hypothesis.rs  inference.rs  lib.rs  measures.rs  parser.rs  pcap.rs  plugin.rs  score.rs  segment.rs  tests.rs
core/src/plugins/: generators.rs  mod.rs  parsers.rs  scorers.rs
gui/: Cargo.toml
gui/src/: main.rs
