[workspace]
members = ["core", "cli", "gui"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Protocol Infer Team"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# PCAP parsing
pcap-parser = "0.17"
etherparse = "0.15"

# Compression
flate2 = "1.0"

# Parallelism
rayon = "1.8"

# Utilities
itertools = "0.12"

