[package]
name = "protocol_infer_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "protocol_infer_core"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
pcap-parser = { workspace = true }
etherparse = { workspace = true }
flate2 = { workspace = true }
rayon = { workspace = true }
itertools = { workspace = true }

[dev-dependencies]
proptest = "1.4"

