[package]
name = "protocol_infer_gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "protocol_infer_gui"
path = "src/main.rs"

[dependencies]
protocol_infer_core = { path = "../core" }
eframe = "0.25"
egui = "0.25"
egui_plot = "0.25"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rfd = "0.13"

